String composition operators now get their own two precedence levels looser than number composers but tighter than junctions, as suggested by tye++.
git-svn-id: http://svn.pugscode.org/pugs@23918 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -12,9 +12,9 @@ Luke Palmer <luke@luqui.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 8 Mar 2004
-  Last Modified: 14 Sep 2007
+  Last Modified: 26 Oct 2007
   Number: 3
-  Version: 123
+  Version: 124
 
 =head1 Overview
 
@@ -22,9 +22,10 @@ For a summary of the changes from Perl 5, see L</Changes to Perl 5 operators>.
 
 =head1 Operator precedence
 
-Not counting terms and terminators, Perl 6 has 21 operator precedence
-levels. (Perl 5 has 23!)  Here we list the levels from "tightest" to
-"loosest", along with a few examples of each level:
+Not counting terms and terminators, Perl 6 has 23 operator precedence
+levels (same as Perl 5, but differently arranged).  Here we list the
+levels from "tightest" to "loosest", along with a few examples of
+each level:
 
     Level               Examples
     =====               ========
@@ -33,8 +34,10 @@ levels. (Perl 5 has 23!)  Here we list the levels from "tightest" to
     Autoincrement       ++ --
     Exponentiation      **
     Symbolic unary      ! + - ~ ? | +^ ~^ ?^ \ ^ =
-    Multiplicative      * / % x xx +& +< +> ~& ~< ~> ?& div mod
-    Additive            + - ~ +| +^ ~| ~^ ?| ?^
+    Multiplicative      * / % +& +< +> ~& ~< ~> ?& div mod
+    Additive            + - +| +^ ~| ~^ ?| ?^
+    Replication         x xx
+    Concatenation       ~
     Junctive and (all)  &
     Junctive or (any)   | ^
     Named unary         rand sleep abs
@@ -711,38 +714,6 @@ Dispatches to the C<< infix:<mod> >> multi most appropriate to the operand types
 
 =item *
 
-C<< infix:<x> >>, string/buffer replication
-
-    $string x $count
-
-Evaluates the left argument in string context, replicates the resulting
-string value the number of times specified by the right argument and
-returns the result as a single concatenated string regardless of context.
-
-If the count is less than 1, returns the null string.
-The count may not be C<*> because Perl 6 does not support
-infinite strings.  (At least, not yet...)  Note, however, that an
-infinite string may be emulated with C<cat($string xx *)>.
-
-=item *
-
-C<< infix:<xx> >>, list replication
-
-    @list xx $count
-
-Evaluates the left argument in list context, replicates the resulting
-C<Capture> value the number of times specified by the right argument and
-returns the result in a context dependent fashion.  If the operator
-is being evaluated in ordinary list context, the operator returns a
-flattened list.  In slice (C<@@>) context, the operator converts each C<Capture>
-to a separate sublist and returns the list of those sublists.
-
-If the count is less than 1, returns the empty list, C<()>.
-If the count is C<*>, returns an infinite list (lazily, since lists
-are lazy by default).
-
-=item *
-
 C<< infix:{'+&'} >>, numeric bitwise and
 
     $x +& $y
@@ -825,12 +796,6 @@ C<< infix:<-> >>, numeric subtraction
 
 =item *
 
-C<< infix:<~> >>, string/buffer concatenation
-
-    $x ~ $y
-
-=item *
-
 C<< infix:<+|> >>, numeric bitwise inclusive or
 
     $x +| $y
@@ -864,6 +829,56 @@ C<< infix:<?|> >>, boolean bitwise inclusive or
 C<< infix:<?^> >> boolean bitwise exclusive or
 
     $x ?^ $y
+
+=back
+
+=head2 Replication
+
+=over
+
+=item *
+
+C<< infix:<x> >>, string/buffer replication
+
+    $string x $count
+
+Evaluates the left argument in string context, replicates the resulting
+string value the number of times specified by the right argument and
+returns the result as a single concatenated string regardless of context.
+
+If the count is less than 1, returns the null string.
+The count may not be C<*> because Perl 6 does not support
+infinite strings.  (At least, not yet...)  Note, however, that an
+infinite string may be emulated with C<cat($string xx *)>.
+
+=item *
+
+C<< infix:<xx> >>, list replication
+
+    @list xx $count
+
+Evaluates the left argument in list context, replicates the resulting
+C<Capture> value the number of times specified by the right argument and
+returns the result in a context dependent fashion.  If the operator
+is being evaluated in ordinary list context, the operator returns a
+flattened list.  In slice (C<@@>) context, the operator converts each C<Capture>
+to a separate sublist and returns the list of those sublists.
+
+If the count is less than 1, returns the empty list, C<()>.
+If the count is C<*>, returns an infinite list (lazily, since lists
+are lazy by default).
+
+=back
+
+=head2 Concatenation
+
+=over
+
+=item *
+
+C<< infix:<~> >>, string/buffer concatenation
+
+    $x ~ $y
 
 =back
 
